fix widget overflow

--- a/src/components/widget/widget.less
+++ b/src/components/widget/widget.less
@@ -36,7 +36,7 @@
     border: @impac-widget-border;
     border-top: none;
     background-color: @impac-widget-background-color;
-    overflow: none;
+    overflow: hidden;
 
     vertical-align: top;
     .box-shadow(0px 1px 8px -4px);
